--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,85 @@
     <groupId>groupId</groupId>
     <artifactId>SpeedWagon</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <avro.version>1.11.1</avro.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+        <directory.main>${project.basedir}/src/main</directory.main>
+        <directory.org.speedwagon>${directory.main}/java/org/speedwagon</directory.org.speedwagon>
+        <directory.org.speedwagon.cargo>${directory.org.speedwagon}/cargo</directory.org.speedwagon.cargo>
+    </properties>
+<dependencies>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.14.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro</artifactId>
+        <version>${avro.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <version>${avro.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-compiler</artifactId>
+        <version>${avro.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-ipc</artifactId>
+        <version>${avro.version}</version>
+    </dependency>
+</dependencies>
+    <build>
+    <plugins>
+    <plugin>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <version>${avro.version}</version>
+        <configuration>
+            <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+            <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+        </configuration>
+        <executions>
+            <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                    <goal>schema</goal>
+                </goals>
+                <configuration>
+                <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+                <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+            </configuration>
 
-    
+            </execution>
+        </executions>
+    </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+                <execution>
+                    <id>build-message-schema</id>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                    <configuration>
+                        <executable>${project.basedir}/src/main/avro/compile-message.sh</executable>
+
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+    </build>
+
+
 </project>
