--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,15 @@
         <artifactId>avro-ipc</artifactId>
         <version>${avro.version}</version>
     </dependency>
+    <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>4.3.0</version>
+    </dependency>
 </dependencies>
     <build>
     <plugins>
+
     <plugin>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro-maven-plugin</artifactId>
@@ -66,24 +72,6 @@
             </execution>
         </executions>
     </plugin>
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>3.1.0</version>
-            <executions>
-                <execution>
-                    <id>build-message-schema</id>
-                    <phase>compile</phase>
-                    <goals>
-                        <goal>exec</goal>
-                    </goals>
-                    <configuration>
-                        <executable>${project.basedir}/src/main/avro/compile-message.sh</executable>
-
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
     </plugins>
     </build>
 
