--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
         <artifactId>jedis</artifactId>
         <version>4.3.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>2.0.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>2.0.6</version>
+    </dependency>
 </dependencies>
     <build>
     <plugins>
