--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
         <artifactId>slf4j-simple</artifactId>
         <version>2.0.6</version>
     </dependency>
+    <dependency>
+        <groupId>com.sun.net.httpserver</groupId>
+        <artifactId>http</artifactId>
+        <version>20070405</version>
+    </dependency>
 </dependencies>
     <build>
     <plugins>
